--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@gsap/react": "^2.1.2",
     "@react-three/drei": "^10.0.7",
     "@react-three/fiber": "^9.1.2",
     "@react-three/postprocessing": "^3.0.4",
     "@tailwindcss/vite": "^4.0.0",
     "clsx": "^2.1.1",
+    "dotenv": "^16.5.0",
     "gsap": "^3.12.7",
     "motion": "^12.9.4",
     "react": "^19.0.0",
